--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:   WPB Child Theme
 Theme URI:    https://www.wpbeginner.com/
 Description:  raacuity
-Author:       WPBeginner
+Author:       WPMiguelMaya
 Author URI:   https://www.wpbeginner.com
 Template:     raacuity
 Version:      1.0.1
