--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a{color:white}
 header .container .row {
     padding: 20px 0 0 45px;
 }
-header{width:100%px;}
+header{width:100px;}
 
 header .container .row h2 {
     padding: 200px 0 70px 0;
