--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Text Domain:  NeveChild
 @import url("../neve/style.css");
 
 
-/* seeing if this shows up on wordpress
+/* 
  * for links color*/
 a{color:white}
 
