--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 	max-width: 80%;
 }
 
+.contact-container .wp-block-columns {
+	margin-bottom: 0;
+}
+
 @media (min-width: 781px) {
 	.contact-step-text,
 	.contact-top-body,
