Style cart buttons

--- a/style.css
+++ b/style.css
@@ -309,7 +309,45 @@ form input:read-write {
 }
 
 .woocommerce table.cart td.actions .input-text#coupon_code+.button {
-	border: none!important;
+	border-color: #FFC619!important;
+}
+
+.woocommerce table.cart td.actions .input-text#coupon_code+.button:hover {
+	border-color: #ecb203!important;
+}
+
+.woocommerce .cart_totals .wc-proceed-to-checkout {
+    --primarybtnpadding: 18px 40px!important;
+}
+
+form select {
+	border-radius: 0!important;
+}
+
+form select option {
+	border-radius: 0!important;
+	border-color: #00549A!important;
+}
+
+.wc-proceed-to-checkout .woocommerce a.button, 
+.wc-proceed-to-checkout .woocommerce a.button.alt {
+	background-color: #00549A!important;
+	transition: .3s;
+}
+
+.wc-proceed-to-checkout .woocommerce a.button:hover, 
+.wc-proceed-to-checkout .woocommerce a.button.alt:hover {
+	background-color: #01236f!important;
+	transition: .3s;
+}
+
+.woocommerce table.shop_table.cart a {
+	transition: .3s;
+}
+
+.woocommerce table.shop_table.cart a:hover {
+	color: #00549A;
+	transition: .3s;
 }
 
 /******** Woo Commerce Pages ***********/
