--- a/style.css
+++ b/style.css
@@ -56,7 +56,31 @@ header .container .row h2 a{
 }
 
 
-/*Home Page*/
+/*About page*/
+figure.wp-block-image.size-full {
+    border-radius: 50%;
+		padding: 50px;
+}
+figcaption {
+   text-align: center;
+	 font-weight: bold;
+	 font-size: 1.3em;
+	 color:#069AFF;
+}
+
+
+
+/*footer*/
+.blurb{
+	font-size: 0.8em;
+	line-height: normal;
+  padding-right: 50px;
+	margin: auto;
+}
+.footer-menu-links{
+	 column-count: 3;
+	 font-size: 0.8em;
+}
 
 
 
