Fix button styling in cart

--- a/style.css
+++ b/style.css
@@ -256,6 +256,11 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 	color: #000!important;
 }
 
+.woocommerce table.shop_table.cart tr:last-child .button {
+	--secondarybtnpadding: 10px 40px!important;
+    --primarybtnpadding: 13px 40px!important;
+}
+
 .woocommerce button.button:hover, 
 .woocommerce button.button.alt:hover {
 	background: #ecb203!important;
@@ -339,7 +344,7 @@ form input:read-write {
 }
 
 .woocommerce .cart_totals .wc-proceed-to-checkout {
-    --primarybtnpadding: 18px 40px!important;
+    --primarybtnpadding: 13px 40px!important;
 }
 
 form select {
