Change button colors for consistency

--- a/style.css
+++ b/style.css
@@ -172,19 +172,20 @@ figcaption {
 .contact-form div.wpforms-container-full .wpforms-form input[type=submit], div.wpforms-container-full .wpforms-form button[type=submit], div.wpforms-container-full .wpforms-form .wpforms-page-button {
 	background-color: #F98B2A;
 	border: none;
-	color: #FFFFFF;
+	color: #fff;
 	font-size: .9em;
 	padding: 8px 0;
 	width: 100%;
 	font-family: raleway;
 	transition: .3s;
 	margin-top: 40px;
+	border-radius: 3px;
 }
 
 .contact-form div.wpforms-container-full .wpforms-form input[type=submit]:hover, div.wpforms-container-full .wpforms-form button[type=submit]:hover, div.wpforms-container-full .wpforms-form .wpforms-page-button:hover {
-	background-color: #FA7703;
+	background-color: #00549A;
 	border: none;
-	color: #FFFFFF;
+	color: #fff;
 	font-size: .9em;
 	padding: 8px 0;
 	width: 100%;
@@ -230,13 +231,14 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 
 .woocommerce-page .nv-index-posts a,
 .woocommerce-page .single-page-container a {
-	color: #FF8500;
+	color: #000;
+	text-decoration: underline;
 	transition: .3s;
 }
 
 .woocommerce-page .nv-index-posts a:hover,
 .woocommerce-page .single-page-container a:hover {
-	color: #FA7703;
+	color: #FFC619;
 	transition: .3s;
 }
 
@@ -263,19 +265,19 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 
 .woocommerce button.button:hover, 
 .woocommerce button.button.alt:hover {
-	background: #ecb203!important;
+	background: #021B50!important;
 	transition: .3s;
-	color: #000!important;
+	color: #fff!important;
 	
 }
 
 .woocommerce .woocommerce-breadcrumb a a {
-	color: #00549A;
+	color: #000;
 	transition: .3s;
 }
 
 .woocommerce .woocommerce-breadcrumb a:hover {
-	color: #021B50;
+	color: #FFC638;
 	transition: .3s;
 }
 
@@ -300,8 +302,8 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 
 .nv-card-content-wrapper a.button:hover,
 .woocommerce-shop a.button:hover {
-	background: #ecb203!important;
-	color: #000!important;
+	background: #021B50!important;
+	color: #fff!important;
 	transition: .3s;
 }
 
@@ -312,20 +314,21 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 }
 
 .woocommerce .woocommerce-message a.button  {
-	border-radius: 0!important;
-	background: #00549A!important;
-	border: 3px solid #fff!important;
+	/* border-radius: 0!important; */
+	background: #FFC619!important;
+	border: none!important;
+	color: #000!important;
+	transition: .3s;
+	text-decoration: none!important;
+}
+
+.woocommerce .woocommerce-message a.button:hover {
+	background: #021B50!important;
 	color: #fff!important;
 	transition: .3s;
 }
 
-.woocommerce .woocommerce-message a.button:hover {
-	background: #fff!important;
-	color: #00549A!important;
-	transition: .3s;
-}
-
-.woocommerce a.button,
+/* .woocommerce a.button,
 .woocommerce button.button, 
 .woocommerce button.button.alt {
 	border-radius: 0!important;
@@ -333,14 +336,14 @@ div.wpforms-container-full .wpforms-form textarea.wpforms-field-medium {
 
 form input:read-write {
 	border-radius: 0!important;
-}
+} */
 
 .woocommerce table.cart td.actions .input-text#coupon_code+.button {
 	border-color: #FFC619!important;
 }
 
 .woocommerce table.cart td.actions .input-text#coupon_code+.button:hover {
-	border-color: #ecb203!important;
+	border-color: #021B50!important;
 }
 
 .woocommerce .cart_totals .wc-proceed-to-checkout {
@@ -358,13 +361,13 @@ form select option {
 
 .wc-proceed-to-checkout .woocommerce a.button, 
 .wc-proceed-to-checkout .woocommerce a.button.alt {
-	background-color: #00549A!important;
+	background-color: #FFC619!important;
 	transition: .3s;
 }
 
 .wc-proceed-to-checkout .woocommerce a.button:hover, 
 .wc-proceed-to-checkout .woocommerce a.button.alt:hover {
-	background-color: #01236f!important;
+	background-color: #021B50!important;
 	transition: .3s;
 }
 
@@ -373,7 +376,20 @@ form select option {
 }
 
 .woocommerce table.shop_table.cart a:hover {
-	color: #00549A;
+	color: #FFC619;
+	text-decoration: underline;
+	transition: .3s;
+}
+
+.woocommerce-cart .wc-proceed-to-checkout a.checkout-button {
+	background-color: #FFC619!important;
+	color: #000!important;
+	transition: .3s;
+}
+
+.woocommerce-cart .wc-proceed-to-checkout a.checkout-button:hover {
+	background-color: #021B50!important;
+	color: #fff!important;
 	transition: .3s;
 }
 
@@ -387,6 +403,7 @@ body.woocommerce-account nav>ul .is-active a {
 	font-weight: 700!important;
 	color: #000!important;
 	opacity: 1;
+	text-decoration: none!important;
 }
 body.woocommerce-account nav>ul .is-active a:hover {
 	color: #0A98FA!important;
@@ -394,6 +411,7 @@ body.woocommerce-account nav>ul .is-active a:hover {
 
 .woocommerce-MyAccount-navigation-link a {
 	font-weight: 700!important;
+	text-decoration: none!important;
 	color:#000!important;
 	opacity: .5;
 }
