Fix style for checkout

--- a/style.css
+++ b/style.css
@@ -417,12 +417,34 @@ body.woocommerce-account nav>ul .is-active a:hover {
 .nv-content-wrap li {
 	border-bottom: 1px solid rgb(180, 179, 179);
 	justify-content: space-around;
-	padding: 20px 0!important;
+	padding: 20px!important;
 	margin: 0!important;
+}
+
+.woocommerce-page .woocommerce-info::before {
+	display: none!important;
+}
+
+.woocommerce-info::before {
+	display: none!important;
 }
 
 .myaccount-menu-icon .svg-inline--fa {
 	margin-right: 8px;
+}
+
+.woocommerce-info>a {
+	background-color: #FFC619!important;
+	border: none!important;
+	color: #000!important;
+	transition: .3s;
+	text-decoration: none!important;
+}
+
+.woocommerce-info>a:hover {
+	background-color: #021B50!important;
+	color: #fff!important;
+	transition: .3s;
 }
 
 /******** Woo Commerce Pages ***********/
